# Scrapping

./: pyproject.toml
auth_quotes/: authors.json  db_connection.py  main.py  models.py  scrapy.cfg  seeds.py
auth_quotes/auth_quotes/: items.py  middlewares.py  pipelines.py  settings.py
auth_quotes/auth_quotes/spiders/: auth_spider.py  quotes_spider.py
